# yolo-uav

./: .gitignore  eval_fusion.py  eval_method_a.py  eval_method_c.py  eval_thermal.py  evaluate_late_fusion_real.py  fix_structure.py  fix_thermal_labels.py  llvip_fusion.yaml  llvip_rgb.yaml  llvip_thermal.yaml  make_article_figures.py  plot_results.py  prepare_data.py  prepare_fusion.py  pyproject.toml  run_inference.py  train_fusion.py  train_method_a.py  train_thermal.py  visualize_method_c.py
diploma_experiments/method_a_rgb/: args.yaml  results.csv
diploma_experiments/method_b_fusion/: args.yaml  results.csv
diploma_experiments/method_thermal_only/: args.yaml  results.csv
docs/: architecture.mermaid
